fix layout shift when dialog is opened

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -9,7 +9,7 @@
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
-    --popover-foreground: oklch(0.145 0 0);
+    --popover-foreground: oklch(0.985 0 0);
     --primary: oklch(0.205 0 0);
     --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
@@ -121,7 +121,7 @@
         @apply h-full;
     }
     body {
-        @apply bg-background text-foreground h-full overflow-y-scroll;
+        @apply bg-background text-foreground h-full !overflow-y-scroll;
     }
 
     button,
